@@ -26,3 +26,4 @@ Features pruned so far and rationale:
 - Highlight/Clear action. Although it only offers one highlighting color, Firefox offers this feature in its find bar.
 - Default, locale dependent bookmarks for Daily Readings action. They need to be maintained.
 - Popup for Daily Readings action. Opening a specific bookmark is better achieved by a Load URL action.
+- Red tag for links. This should be achieved through a user style sheet.
