@@ -106,7 +106,6 @@ function eG_setPrefs(locale){	// this function is also called in options.xul wit
 
 	eG_setActions(true);
     
-	eG_prefsObs.prefs.setBoolPref("customizations.xlink", true);			
 	eG_prefsObs.prefs.setCharPref("customizations.openLink", "newTab");			// "curTab"  or "newTab" or "newWindow"
     
 	eG_prefsObs.prefs.setBoolPref("customizations.closeBrowserOnLastTab", true);
