@@ -105,7 +105,6 @@ END OF INSTRUCTIONS
 <!ENTITY link.curTab "Otevřít odkaz v aktuálním panelu">
 <!ENTITY link.newTab "Otevřít odkaz v novém panelu">
 <!ENTITY link.newWindow "Otevřít odkaz v novém okně">
-<!ENTITY link.xlink "označit odkaz s">
 
 <!ENTITY autoscrolling "Automatický posun přes střed nabídky">
 <!ENTITY autoscrolling.autoscrollingDelayLabel "Zpoždění [ms]">
